--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ importlib-metadata==6.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+python-dotenv==1.0.0
 SQLAlchemy==2.0.7
 typing-extensions==4.5.0
 Werkzeug==2.2.3
